# brainless/models/account.py
@@ -1,7 +1,8 @@
 from datetime import datetime
 from marshmallow_sqlalchemy import SQLAlchemyAutoSchema
 from configuration import db, CONST_OAUTH, CONST_CALENDAR
-from models.event import Event
+from models.calendar import Calendar
+from models.project import Project
 
 class Account(db.Model):
     """ Account class """
@@ -19,7 +20,8 @@ class Account(db.Model):
     created_timestamp = db.Column(db.DateTime, default=datetime.utcnow)
     edited_timestamp = db.Column(db.DateTime, default=datetime.utcnow, onupdate=datetime.utcnow)
 
-    events = db.relationship('Event', backref='account', lazy=True)
+    calendars = db.relationship('Calendar', backref='account', lazy=True)
+    projects = db.relationship('Project', backref='account', lazy=True)
 
     def __init__(self, name, provider, user_id, client_id, client_secret, sync_frequency=5, account_type=CONST_CALENDAR, authentication_type=CONST_OAUTH):
         self.account_id = None
